added functionality, fixed bugs

--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
 <body>
     <div id="main">
         <div class="button" id="display">0</div>
-        <div class="button" id="back">←</div>
-        <div class="button" id="reset">C</div>
-        <div class="button" id="divide">/</div>
-        <div class="button" id="multiply">×</div>
+        <div class="button operator" id="back">←</div>
+        <div class="button operator" id="reset">C</div>
+        <div class="button operator" id="divide">/</div>
+        <div class="button operator" id="multiply">×</div>
 
         <div class="button" id="seven">7</div>
         <div class="button" id="eight">8</div>
         <div class="button" id="nine">9</div>
-        <div class="button" id="subtract">-</div>
+        <div class="button operator" id="subtract">-</div>
 
         <div class="button" id="four">4</div>
         <div class="button" id="five">5</div>
         <div class="button" id="six">6</div>
-        <div class="button" id="add">+</div>
+        <div class="button operator" id="add">+</div>
 
         <div class="button" id="one">1</div>
         <div class="button" id="two">2</div>
         <div class="button" id="three">3</div>
-        <div class="button" id="enter">↵</div>
+        <div class="button operator" id="enter">↵</div>
         
         
         <div class="button" id="zero">0</div>
